# cubecrit

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
cubecrit/: __init__.py  db.py  schema.sql  seed.sql  sync.py  validate.py
cubecrit/controllers/: __init__.py  greetings.py  index.py  manufacturer.py  manufacturers.py  puzzles.py  search.py
cubecrit/data/: manufacturers.csv
cubecrit/models/: greeting.py  manufacturer.py  puzzle.py  review.py  user.py
cubecrit/sql/: get_all_puzzle_types.sql  get_all_puzzles.sql  get_num_puzzles.sql  get_puzzle.sql  get_puzzle_page.sql  get_puzzle_type.sql  get_review.sql  get_user.sql  schema.sql  seed.sql
cubecrit/sql/sync/: countries.sql  manufacturers.sql  puzzle_types.sql  puzzles.sql
cubecrit/static/js/: init-theme.js  set-theme.js
cubecrit/static/styles/: navbar.css
cubecrit/templates/: all_puzzles.html  base.html  greeting.html  index.html  manufacturer.html  puzzle.html  puzzles.html  search.html
tests/: conftest.py  test_sync.py  test_validate.py
tests/models/: test_manufacturer.py  test_puzzle.py
