[tool.poetry]
name = "cubecrit"
version = "0.1.0"
description = "A website for reviewing speedcubes."
authors = ["Robert Yin <bobertoyin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
sqlalchemy = "^2.0.26"
bcrypt = "^4.1.2"
psycopg2 = "^2.9.9"
immutabledict = "^4.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
mypy = "^1.8.0"
pytest = "^8.0.1"
poethepoet = "^0.24.4"
djlint = "^1.34.1"
pydocstyle = "^6.3.0"
sqlfluff = "^2.3.5"

[tool.poe.tasks]
ruff-check-fix = "ruff check --fix"
ruff-format = "ruff format"
djlint-format = "djlint . --reformat"
sqlfluff-fix = "sqlfluff fix -f"

format.sequence = ["ruff-check-fix", "ruff-format", "djlint-format", "sqlfluff-fix"]
format.ignore_fail = "return_non_zero"

ruff-check = "ruff check"
ruff-format-check = "ruff format --check"
djlint-format-check = "djlint . --check"
djlint-lint = "djlint . --lint"
sqlfluff-lint = "sqlfluff lint"
pydocstyle = "pydocstyle ."
mypy = "mypy ."

lint.sequence = ["ruff-check", "ruff-format-check", "djlint-format-check", "djlint-lint", "sqlfluff-lint", "pydocstyle", "mypy"]
lint.ignore_fail = "return_non_zero"

flask-debug = "flask --app cubecrit run --debug --reload --port 3000"

[tool.djlint]
profile = "jinja"
format_css = true
format_js = true

[tool.sqlfluff.core]
dialect = "postgres"
templater = "placeholder"

[tool.sqlfluff.templater.placeholder]
param_regex = "(?<![:\\w\\x5c]):(['\\\"]?)(?P<param_name>[\\w_]+)\\1" # yucky hack to get psql to lint properly: https://github.com/NYCPlanning/data-engineering/pull/187

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
