[tool.poetry]
name = "cubecrit"
version = "0.1.0"
description = "A website for reviewing speedcubes."
authors = ["Robert Yin <bobertoyin@gmail.com>", "Eli Parker <epproper54@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
sqlalchemy = "^2.0.26"
psycopg2 = "^2.9.9"
immutabledict = "^4.1.0"
flask-apscheduler = "^1.13.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
mypy = "^1.8.0"
pytest = "^8.0.1"
poethepoet = "^0.24.4"
djlint = "^1.34.1"
pydocstyle = "^6.3.0"
sqlfluff = "^3.0.6"
pytest-cov = "^4.1.0"
munch = "^4.0.0"
munch-stubs = "^0.1.2"

[tool.poe.tasks]
ruff-check-fix = "ruff check --fix"
ruff-format = "ruff format"
djlint-format = "djlint . --reformat"
sqlfluff-fix = "sqlfluff fix"

format.sequence = ["ruff-check-fix", "ruff-format", "djlint-format", "sqlfluff-fix"]
format.ignore_fail = "return_non_zero"

ruff-check = "ruff check"
ruff-format-check = "ruff format --check"
djlint-format-check = "djlint . --check"
djlint-lint = "djlint . --lint"
sqlfluff-lint = "sqlfluff lint"
pydocstyle = "pydocstyle cubecrit"
mypy = "mypy ."

lint.sequence = ["ruff-check", "ruff-format-check", "djlint-format-check", "djlint-lint", "sqlfluff-lint", "pydocstyle", "mypy"]
lint.ignore_fail = "return_non_zero"

flask-debug = "flask --app cubecrit run --debug --reload --port 3000"

[tool.pytest.ini_options]
addopts = "--cov=cubecrit --cov-report=term-missing --cov-fail-under=65"

[tool.ruff.lint]
extend-select = ["I"]

[tool.djlint]
profile = "jinja"
format_css = true
format_js = true
ignore = "H006"

[tool.sqlfluff.core]
dialect = "postgres"
templater = "placeholder"

[tool.sqlfluff.templater.placeholder]
param_style = "colon" # allows us to use unquoted pqsl variables

[[tool.mypy.overrides]]
module = "flask_apscheduler"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
